# diagraph

./: .gitignore  .gitmodules  Makefile  README.MD  README.md  adjacency.typ  diagraph.wasm  generate_images.awk  generate_images.sh  graphviz.wasm  internals.typ  lib.typ  typst.toml  utils.typ
doc/: manual.typ
examples/: VERYlargegraph.txt  filerender.dot  filerender.typ  font.typ  fontcolor.typ  relative.typ  simplegraph.typ  test.typ  xalbel.typ
graphviz/: Cargo.toml
graphviz/src/: lib.rs
graphviz_interface/: .clang-format  Makefile  diagraph.prot  diagraph.wasm  main.c  protocol.typ
graphviz_interface/src/: main.c
graphviz_interface/src/color/: color.c  color.h  colors.h
graphviz_interface/src/math/: math.c  math.h
graphviz_interface/src/protocol/: plugin.h  protocol.c  protocol.h
graphviz_interface/src/utils/: utils.c  utils.h
src/: adjacency.typ  internals.typ
tests/adjacency/: test.typ
tests/adjacencyEdgesProp/: test.typ
tests/adjacencyLabelProp/: test.typ
tests/clustersoverwrite/: test.typ
tests/colorNames/: test.typ
tests/customColors/: test.typ
tests/edgeslabeloverwrite/: test.typ
tests/functionlabel/: test.typ
tests/issue_56/: test.typ
tests/labeloverwrite/: test.typ
tests/landscape/: test.typ
tests/math_corner_cases/: test.typ
tests/mathmode/: test.typ
tests/pointlabels/: test.typ
tests/simplegraph/: test.typ
tests/stretch/: test.typ
tests/xlabel_placement/: test.typ
tests/xlabeloverwrite/: test.typ
